--- a/app/elements/rabbitmq/cluster-info.html
+++ b/app/elements/rabbitmq/cluster-info.html
@@ -9,68 +9,103 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="../../bower_components/things-grid/things-resource-grid.html">
 <link rel="import" href="../../bower_components/things-content/things-resource-menu-content-behavior.html">
 
+<!--
+  미들웨어 > 클러스터 정보 조회
+-->
 <dom-module id="cluster-info">
-    <template>
-        <style>
-            :host {
-                @apply(--layout-flex);
-                @apply(--layout-vertical);
-            }
+  <template>
+    <style>
+      :host {
+        @apply(--layout-flex);
+        @apply(--layout-vertical);
+      }
 
-            things-resource-grid {
-                @apply(--layout-vertical);
-                @apply(--layout-flex);
-            }
-        </style>
+      things-resource-grid {
+        @apply(--layout-vertical);
+        @apply(--layout-flex);
+      }
+    </style>
 
-        <!-- Get Menu Meta Ajax -->
-        <things-ajax auto id="resource-meta" resource-url="[[menuMetaUrl]]" resource-action="index" last-response="{{metaData}}">
-        </things-ajax>
+    <!-- Get Menu Meta Ajax -->
+    <things-ajax 
+      auto 
+      id="resource-meta" 
+      resource-url="[[menuMetaUrl]]" 
+      resource-action="index" 
+      last-response="{{metaData}}">
+    </things-ajax>
 
-        <!-- Search form -->
-        <things-search-form id="search-form" title="[[menuInfo.title]]" form-fields="[[searchFormFields]]" select-fields="[[selectFields]]"
-            sort-fields="[[sortFields]]" action-url="[[menuInfo.resource_url]]" page="{{page}}" limit="{{limit}}" last-response="{{lastResponse}}">
-        </things-search-form>
+    <!-- Search form -->
+    <things-search-form 
+      id="search-form" 
+      title="[[menuInfo.title]]" 
+      form-fields="[[searchFormFields]]" 
+      select-fields="[[selectFields]]"
+      sort-fields="[[sortFields]]" 
+      action-url="[[menuInfo.resource_url]]" 
+      page="{{page}}" 
+      limit="{{limit}}" 
+      last-response="{{lastResponse}}">
+    </things-search-form>
 
-        <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[gridColumns]]" buttons="[[buttons]]"
-            paginatable=[[paginatable]] show-paginator=[[paginatable]] current-page="{{page}}" limit="{{limit}}" data="[[items]]"
-            total-count="[[itemCount]]" fixed-column-count="[[menuInfo.fixed_columns]]" grid-save-action="[[menuInfo.grid_save_url]]">
-        </things-resource-grid>
-    </template>
+    <!-- Grid -->
+    <things-resource-grid 
+      id="grid" 
+      config="[[gridConfig]]" 
+      model="[[gridModel]]" 
+      columns="[[gridColumns]]" 
+      buttons="[[buttons]]"
+      paginatable=[[paginatable]] 
+      show-paginator=[[paginatable]] 
+      current-page="{{page}}" 
+      limit="{{limit}}" 
+      data="[[items]]"
+      total-count="[[itemCount]]" 
+      fixed-column-count="[[menuInfo.fixed_columns]]" 
+      grid-save-action="[[menuInfo.grid_save_url]]">
+    </things-resource-grid>
+  </template>
 
-    <script>
-        Polymer({
-            is: 'cluster-info',
+  <script>
+    Polymer({
+      is: 'cluster-info',
 
-            behaviors: [
-                Things.ResourceMenuContentBehavior
-            ],
+      behaviors: [
+        Things.ResourceMenuContentBehavior
+      ],
 
-            properties: {
-                paginatable: {
-                    type: Boolean,
-                    value: true
+      properties: {
+        /**
+         * @description 페이지네이션 여부
+         *************************
+         * @type {Boolean}
+         */
+        paginatable: {
+          type: Boolean,
+          value: true
+        },
+
+        /**
+         * @description 그리드 Configuration
+         *************************
+         * @type {Boolean}
+         */
+        gridConfig: {
+          type: Object,
+          value: function() {
+            return {
+              options: {
+                checkBar: {
+                  visible: false
                 },
-
-                gridConfig: {
-                    type: Object,
-                    value: function () {
-                        return {
-                            options: {
-                                checkBar: {
-                                    visible: false
-                                },
-                                displayOptions: {
-                                    fitStyle: 'fill'
-                                }
-                            }
-                        }
-                    }
+                displayOptions: {
+                  fitStyle: 'fill'
                 }
-            },
-
-            listeners: {
+              }
             }
-        });
-    </script>
+          }
+        }
+      }
+    });
+  </script>
 </dom-module>
